test/1.4/errors/T_ESYNTAX_old_parameter.dml
/*
  © 2021-2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

/// ERROR ESYNTAX
parameter x;
